# lxqt-nvmonitor

./: .gitignore  CMakeLists.txt  PACKAGING.md  README.md  nvmonitor.cpp  nvmonitor.h  nvmonitorconfiguration.cpp  nvmonitorconfiguration.h  nvmonitorconfiguration.ui  nvmonitorplugin.cpp  nvmonitorplugin.h
debian/: build-package.sh  changelog  control  copyright  debhelper-build-stamp  files  rules  watch
resources/: nvmonitor.desktop.in
tests/: CMakeLists.txt  test_nvml.cpp  test_settings.cpp  test_widget.cpp
